# tcg-bound

./: .gitignore  Cargo.toml  README.md  index.html  sw.js  tcg-bound.js  tcg-bound_bg.wasm
.github/workflows/: deploy_web.yml  pages.yml  rust.yml
scripts/: build_web.sh  setup_web.sh
src/: app.rs  binder.rs  card_number.rs  lib.rs  main.rs
tcg_bound_app/: index.html
