[package]
name = "tcg-bound"
version = "0.1.0"
# edition = "2024"
edition = "2021"
description = "A tool to help organise TCG binders."
authors = ["Phillip Smith <TimeTravelPenguin@gmail.com>"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[dependencies]
catppuccin-egui = { version = "5.5.0", default-features = false, features = [
  "egui31",
] }
clap = { version = "4.5.32", features = ["derive", "wrap_help"] }
eframe = { version = "0.31", default-features = false, features = [
  "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
  "wayland",       # To support Linux (and CI)
] }
egui = "0.31"
egui_extras = "0.31.1"
egui_flex = "0.3.0"
log = "0.4"
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
incremental = false

[profile.dev]
opt-level = 2
debug = true
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2
